19 February 2018: Wouter
	- Fix #3505: Documentation for default local zones references
	  wrong RFC.

16 February 2018: Wouter
	- Fixes for clang static analyzer, the missing ; in
	  edns-subnet/addrtree.c after the assert made clang analyzer
	  produce a failure to analyze it.

13 February 2018: Ralph
	- Aggressive NSEC tests

13 February 2018: Wouter
	- tls-cert-bundle option in unbound.conf enables TLS authentication.
	- iana port update.

12 February 2018: Wouter
	- Unit test for auth zone https url download.

12 February 2018: Ralph
	- Added tests with wildcard expanded NSEC records (CVE-2017-15105 test)
	- Processed aggressive NSEC code review remarks Wouter

8 February 2018: Ralph
	- Aggressive use of NSEC implementation. Use cached NSEC records to
	  generate NXDOMAIN, NODATA and positive wildcard answers.

8 February 2018: Wouter
	- iana port update.
	- auth zone url config.

5 February 2018: Wouter
	- Fix #3451: dnstap not building when you have a separate build dir.
	  And removed protoc warning, set dnstap.proto syntax to proto2.
	- auth-zone provides a way to configure RFC7706 from unbound.conf,
	  eg. with auth-zone: name: "." for-downstream: no for-upstream: yes
	  fallback-enabled: yes and masters or a zonefile with data.

2 February 2018: Wouter
	- Fix unfreed locks in log and arc4random at exit of unbound.
	- unit test with valgrind
	- Fix lock race condition in dns cache dname synthesis.
	- lock subnet new item before insertion to please checklocks,
	  no modification of critical regions outside of lock region.

1 February 2018: Wouter
	- fix unaligned structure making a false positive in checklock
	  unitialised memory.

29 January 2018: Ralph
	- Use NSEC with longest ce to prove wildcard absence.
	- Only use *.ce to prove wildcard absence, no longer names.

25 January 2018: Wouter
	- ltrace.conf file for libunbound in contrib.

23 January 2018: Wouter
	- Fix that unbound-checkconf -f flag works with auto-trust-anchor-file